# rocket-sqlx-authentication-api-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  exampleauth.service  rebuild.sh  run.sh
config/: Settings.toml
src/: main.rs
src/entities/: login.rs  mod.rs  users.rs  web_session.rs
src/fairings/: apikey_fairing.rs  mod.rs
src/manage_sessions/: mod.rs  session_funcs.rs
src/manage_users/: mod.rs  user_funcs.rs
